# sam-interactive-server

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: docker-build.yml
anno-sdk/: CLAUDE.md  pyproject.toml
anno-sdk/src/anno_sdk/: __init__.py  client.py  exceptions.py  handler.py  inference.py  interactive.py  interactive_predictor.py  interactive_server.py  prompts.py  server.py  types.py
anno-sdk/tests/: test_client.py  test_inference.py  test_interactive.py  test_interactive_server.py  test_prompts.py  test_server.py  test_types.py
