[project]
name = "anno-sdk"
version = "0.4.0"
description = "Python SDK for the Anno annotation platform inference API"
readme = "README.md"
authors = [{ name = "Cam", email = "yulinfeng000@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["httpx>=0.28", "numpy>=2.0.0,<2.3"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-httpx>=0.35", "ruff>=0.14"]
server = [
    "fastapi>=0.122",
    "uvicorn[standard]>=0.36",
    "python-multipart>=0.0.20",
]
[project.scripts]
anno-serve = "anno_sdk.server:main"
anno-serve-interactive = "anno_sdk.interactive_server:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.20",
]
